[package]
name = "write_file"
version = "0.1.0"
edition = "2021"

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
libc = "0.2"
tokio = { version = "1.36", features = [ "fs", "net" ], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.36", features = [ "fs", "net", "rt", "macros", "io-util" ] }
